Changes
=======

0.7.5
* added definitions for return types of literal operators, so users can refer to those

0.7.4
* fixed many individual issues found during an extensive code review
* added increment/decrement operators for integral types

0.7.3
* allow ratios as exponents for pow
* allow extracting square and cube roots of ratios (limited to a few ratios)

0.7.2
* fixed type in detail::is_same_v
* removed tag from fractions

0.7.1
* fixed pow and sqrt for quantities by adding pow_scale_t and sqrt_scale_t
* added unlib/ratio.hpp, used by other headers

0.7.0
* allowed quantity multiplication and division of units with different tags under specific circumstances
* added pow function

0.6.6
* added scalar types

0.6.5
* fixed rounding errors when scaling
* added common unit volumetric_flow_rate
* improved documentation

0.6.4
* added meta function to untag quantities
* added to_no_scale meta function
* added reactive and apparent energy

0.6.3
* fixed test for volumetric flow

0.6.2
* added area, volume, and volumetric flow quantities

0.6.1
* test improvements

0.6
* compiles with VC now
* eliminated most GCC/clang warnings

0.5.4
* fixed link errors with some compilers/compiler versions
* test improvements

0.5.3
* improvements in scaling

0.5.2
* added math header with abs and sqrt

older
<-detailed history shrouded by the mists of time->